Fix body width adding scrollbar, replace with min-width

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,7 +9,7 @@
 @import "contact/contact";
 
 body {
-  width: 100vw;
+  min-width: 300px;
   min-height: 50px;
   margin: 0;
   background: #1a1a1a;
